using System.Collections.Generic;
using LibraryManager.Interfaces;
using LibraryManager.Models;

namespace LibraryManager.Services
{
    public class BookHistoryService : IBookHistoryService
    {
        // TODO: Triển khai các phương thức
        // ...
        public void AddBookHistory(BookHistory bookHistory)
        {

        }
        public List<BookHistory> GetBookHistory(int bookId)
        {
            return new List<BookHistory>();
        }
    }
}