using System.Collections.Generic;
using LibraryManager.Interfaces;
using LibraryManager.Models;

namespace LibraryManager.Services
{
    public class MemberService : IMemberService
    {
        public void AddMember(Member member)
        {

        }
        public void UpdateMember(Member member){

        }
        public void DeleteMember(int memberId)
        {

        }
        public List<Member> GetAllMembers()
        {
            return null;
        }        
        public Member GetMemberById(int memberId)
        {
            return null;
        }
    }
}